--- a/package.json
+++ b/package.json
@@ -12,19 +12,25 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.11.1",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.78.0",
     "@vercel/postgres": "^0.10.0",
     "bcrypt": "^6.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cookie": "^1.0.2",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "jose": "^6.1.0",
+    "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -36,8 +42,10 @@
     "drizzle-kit": "^0.31.6",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "shadcn": "^3.5.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
