--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "16.0.1",
     "next-auth": "^4.24.13",
     "pg": "^8.16.3",
+    "qrcode": "^1.5.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.3.1",
