--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookie": "^1.0.2",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
+    "embla-carousel-react": "^8.6.0",
     "jose": "^6.1.0",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
     "@types/pg": "^8.15.6",
     "@types/react": "^19",
